--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,7 @@
     <fragment
         android:id="@+id/id_calorie_fragment"
         android:name="com.example.gofitpal.CalorieCounterFragment"
-        android:label="Calorie Counter"
+        android:label="Calorie Counter Result"
         tools:layout="@layout/fragment_calorie_counter" />
     <fragment
         android:id="@+id/id_diet_fragment"
